--- a/jakc_queue/views/templates.xml
+++ b/jakc_queue/views/templates.xml
@@ -281,7 +281,7 @@
 				                <div class="col-md-12 text-center">
 				                    <h1 id="message"></h1>
 				                    <h3>
-				                        Based on Oddo
+				                       	Jakc Labs
 				                    </h3>
 				                </div>
 				            </div><!-- End Main Text -->
