--- a/jakc_queue/views/jakc_queue_view.xml
+++ b/jakc_queue/views/jakc_queue_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="windows-1252"?>
-<openerp>
+<odoo>
     <data>
         <!-- QUEUE/DISPLAY -->
         <record model="ir.ui.view" id="view_queue_display_form">
@@ -275,6 +275,5 @@
                 </p>
             </field>
         </record>
-                
   	</data>
-</openerp>
+</odoo>
