--- a/jakc_queue/views/jakc_queue_pickup_dashboard.xml
+++ b/jakc_queue/views/jakc_queue_pickup_dashboard.xml
@@ -1,19 +1,16 @@
 <odoo>
     <data>
         <!-- Dashboard -->
-
         <record id="view_queue_pickup_kanban" model="ir.ui.view">
             <field name="name">queue.pickup.kanban.view</field>
             <field name="model">queue.pickup</field>
             <field name="arch" type="xml">
                 <kanban create="false" class="o_kanban_dashboard">
                     <field name="name"/>
-                    <field name="session_ids"/>
-                    <field name="current_session_id"/>
-                    <field name="current_session_state"/>
-                    <field name="last_session_closing_date"/>
-                    <field name="pos_session_username"/>
-                    <field name="currency_id"/>
+                    <field name="pickup_log_ids"/>
+                    <field name="current_pickup_log_id"/>
+                    <field name="current_pickup_log_state"/>
+                    <field name="pos_pickup_log_username"/>
                     <templates>
                         <t t-name="kanban-box">
                             <div>
@@ -23,7 +20,7 @@
                                             <t t-esc="record.name.value"/>
                                         </div>
                                         <div class="o_secondary">
-                                            <t t-esc="record.pos_session_username.value || 'Unused'"/>
+                                            <t t-esc="record.pickup_log_username.value || 'Unused'"/>
                                         </div>
                                     </div>
                                     <div class="o_kanban_manage_button_section">
@@ -35,51 +32,16 @@
                                 <div class="container o_kanban_card_content o_visible">
                                     <div class="row">
                                         <div class="col-xs-6 o_kanban_primary_left">
-                                            <button t-if="record.current_session_state.raw_value === 'opened'"
+                                            <button t-if="record.current_pickup_log_state.raw_value === 'opened'"
                                                     class="btn btn-primary" name="open_ui" type="object">Resume
                                             </button>
-
-                                            <button t-if="record.current_session_state.raw_value === 'opening_control'"
-                                                    class="btn btn-primary" name="open_existing_session_cb"
-                                                    type="object">Open Session
-                                            </button>
-
-                                            <button t-if="record.current_session_state.raw_value === 'opened'"
+                                            <button t-if="record.current_pickup_log_state.raw_value === 'opened'"
                                                     class="btn btn-default" name="open_existing_session_cb_close"
                                                     type="object">Close
                                             </button>
-
-                                            <button t-if="record.current_session_state.raw_value === 'closing_control'"
-                                                    class="btn btn-default" name="open_existing_session_cb"
-                                                    type="object">Close
-                                            </button>
                                             <button t-if="!record.current_session_id.raw_value" class="btn btn-primary"
-                                                    name="open_session_cb" type="object">New Session
+                                                    name="open_pickup_log_cb" type="object">New Pickup Log
                                             </button>
-                                        </div>
-                                        <div class="col-xs-6 o_kanban_primary_right">
-
-                                            <div t-if="record.last_session_closing_date.value" class="row">
-                                                <div class="col-xs-6">
-                                                    <span>Last Closing Date</span>
-                                                </div>
-                                                <div class="col-xs-6">
-                                                    <span>
-                                                        <t t-esc="record.last_session_closing_date.value"/>
-                                                    </span>
-                                                </div>
-                                            </div>
-
-                                            <div t-if="record.last_session_closing_date.value" class="row">
-                                                <div class="col-xs-6">
-                                                    <span>Cash Balance</span>
-                                                </div>
-                                                <div class="col-xs-6">
-                                                    <span>
-                                                        <field name="last_session_closing_cash" widget="monetary"/>
-                                                    </span>
-                                                </div>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -91,19 +53,6 @@
                                             </div>
                                             <div>
                                                 <a name="%(action_pos_session_filtered)d" type="action">Sessions</a>
-                                            </div>
-                                            <div>
-                                                <a name="%(action_pos_order_filtered)d" type="action">Sales Orders</a>
-                                            </div>
-                                        </div>
-                                        <div class="col-xs-6 o_kanban_card_manage_section o_kanban_manage_new">
-                                            <div class="o_kanban_card_manage_title">
-                                                <span>Reports</span>
-                                            </div>
-                                            <div>
-                                                <a name="%(action_report_pos_order_all_filtered)d" type="action">
-                                                    Orders
-                                                </a>
                                             </div>
                                         </div>
                                     </div>
