--- a/jakc_queue/views/jakc_queue_view.xml
+++ b/jakc_queue/views/jakc_queue_view.xml
@@ -74,6 +74,7 @@
                 <form string="Queue Pickup" version="7.0">
                     <header>
                         <button name="trans_close" string="Close" type="object" class="oe-highlight" state="opened"/>
+                        <field name="state" widget="statusbar"/>
                     </header>
                 	<sheet>
 	                    <group>                            
@@ -81,8 +82,7 @@
 				            <field name="pickup_type"/>				            
 				            <field name="type_id"/>
 				            <field name="display_id"/>
-				            <field name="state"/>	                                                   
-	                    </group>	                		                	
+                        </group>
                 	</sheet>  
                 </form>
             </field>
