--- a/jakc_queue/views/routing_screen_templates.xml
+++ b/jakc_queue/views/routing_screen_templates.xml
@@ -2,295 +2,10 @@
     <data>
         <template id="routingscreen">
             <html>
-                <head>
-                    <meta charset="utf-8"/>
-                    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-                    <title>AdminLTE 2 | Blank Page</title>
-                    <!-- Tell the browser to be responsive to screen width -->
-                    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
-                    <!-- Bootstrap 3.3.7 -->
-                    <link rel="stylesheet" href="/jakc_queue/static/src/css/bootstrap/dist/css/bootstrap.min.css"/>
-                    <!-- Font Awesome -->
-                    <link rel="stylesheet" href="/jakc_queue/static/src/css/font-awesome/css/font-awesome.min.css"/>
-                    <!-- Ionicons -->
-                    <link rel="stylesheet" href="/jakc_queue/static/src/css/Ionicons/css/ionicons.min.css"/>
-                    <!-- Theme style -->
-                    <link rel="stylesheet" href="/jakc_queue/static/src/css/AdminLTE.min.css"/>
-                    <!-- AdminLTE Skins. Choose a skin from the css/skins
-                         folder instead of downloading all of them to reduce the load. -->
-                    <link rel="stylesheet" href="/jakc_queue/static/src/css/skins/_all-skins.min.css"/>
+                <html>
 
-                    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-                    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-                    <!--[if lt IE 9]>
-                    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-                    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-                    <![endif]-->
-
-                    <!-- Google Font -->
-                    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"/>
-                </head>
-                <body class="hold-transition skin-blue sidebar-collapse sidebar-mini">
-                    <!-- Site wrapper -->
-                    <div class="wrapper">
-
-                        <!-- Left side column. contains the sidebar -->
-                        <aside class="main-sidebar">
-                            <!-- sidebar: style can be found in sidebar.less -->
-                            <section class="sidebar">
-                                <!-- Sidebar user panel -->
-                                <div class="user-panel">
-                                    <div class="pull-left image">
-                                        <img src="/jakc_queue/static/src/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
-                                    </div>
-                                    <div class="pull-left info">
-                                        <p>Alexander Pierce</p>
-                                        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-                                    </div>
-                                </div>
-                                <!-- search form -->
-                                <form action="#" method="get" class="sidebar-form">
-                                    <div class="input-group">
-                                        <input type="text" name="q" class="form-control" placeholder="Search..."/>
-                                        <span class="input-group-btn">
-                                            <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                                            </button>
-                                        </span>
-                                    </div>
-                                </form>
-                                <!-- /.search form -->
-                                <!-- sidebar menu: : style can be found in sidebar.less -->
-                            </section>
-                            <!-- /.sidebar -->
-                        </aside>
-
-                        <!-- =============================================== -->
-
-                        <!-- Content Wrapper. Contains page content -->
-                        <div class="content-wrapper">
-                            <!-- Content Header (Page header) -->
-
-                            <!-- Main content -->
-                            <section class="content">
-                                <div class="row">
-                                    <div class="col-md-4 col-xs-12">
-                                        <!-- Widget: user widget style 1 -->
-                                        <div class="box box-widget widget-user-2">
-                                            <!-- Add the bg color to the header using any of the bg-* classes -->
-                                            <div class="widget-user-header bg-yellow">
-                                                <div class="widget-user-image">
-                                                    <img class="img-circle" src="../dist/img/user7-128x128.jpg" alt="User Avatar"/>
-                                                </div>
-                                                <!-- /.widget-user-image -->
-                                                <h3 class="widget-user-username">Counter 01</h3>
-                                                <h5 class="widget-user-desc">Lead Developer</h5>
-                                            </div>
-                                            <div class="box-footer no-padding">
-                                                <center>
-                                                    <span class="badge bg-yellow" style="margin:20px;font-size:148px;">0</span>
-                                                    <span class="badge bg-yellow" style="margin:20px;font-size:148px;">2</span>
-                                                    <span class="badge bg-yellow" style="margin:20px;font-size:148px;">2</span>
-                                                </center>
-                                            </div>
-                                        </div>
-                                        <!-- /.widget-user -->
-                                    </div>
-                                    <div class="col-md-4 col-xs-12">
-                                        <!-- Widget: user widget style 1 -->
-                                        <div class="box box-widget widget-user-2">
-                                            <!-- Add the bg color to the header using any of the bg-* classes -->
-                                            <div class="widget-user-header bg-green">
-                                                <div class="widget-user-image">
-                                                    <img class="img-circle" src="../dist/img/user7-128x128.jpg" alt="User Avatar"/>
-                                                </div>
-                                                <!-- /.widget-user-image -->
-                                                <h3 class="widget-user-username">Counter 01</h3>
-                                                <h5 class="widget-user-desc">Lead Developer</h5>
-                                            </div>
-                                            <div class="box-footer no-padding">
-                                                <center>
-                                                    <span class="badge bg-green" style="margin:20px;font-size:148px;">31</span>
-                                                </center>
-                                            </div>
-                                        </div>
-                                        <!-- /.widget-user -->
-                                    </div>
-                                    <div class="col-md-4 col-xs-12">
-                                        <video controls="controlss" autoplay="autoplay" style="display:block; margin: 0 auto;">
-                                            <source src="static/src/vid/movie.mp4" type="video/mp4"/>
-                                            Your browser does not support the video tag.
-                                        </video>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-3 col-xs-12">
-                                        <!-- small box -->
-                                        <div class="small-box bg-green">
-                                            <div class="inner">
-                                                <h3>101<sup style="font-size: 20px">%</sup></h3>
-
-                                                <p>Bounce Rate</p>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ion ion-stats-bars"></i>
-                                            </div>
-                                            <a href="#" class="small-box-footer">
-                                                More info <i class="fa fa-arrow-circle-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-xs-12">
-                                        <!-- small box -->
-                                        <div class="small-box bg-green">
-                                            <div class="inner">
-                                                <h3>102<sup style="font-size: 20px">%</sup></h3>
-
-                                                <p>Bounce Rate</p>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ion ion-stats-bars"></i>
-                                            </div>
-                                            <a href="#" class="small-box-footer">
-                                                More info <i class="fa fa-arrow-circle-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-xs-12">
-                                        <!-- small box -->
-                                        <div class="small-box bg-green">
-                                            <div class="inner">
-                                                <h3>101<sup style="font-size: 20px">%</sup></h3>
-
-                                                <p>Bounce Rate</p>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ion ion-stats-bars"></i>
-                                            </div>
-                                            <a href="#" class="small-box-footer">
-                                                More info <i class="fa fa-arrow-circle-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-xs-12">
-                                        <!-- small box -->
-                                        <div class="small-box bg-green">
-                                            <div class="inner">
-                                                <h3>102<sup style="font-size: 20px">%</sup></h3>
-
-                                                <p>Bounce Rate</p>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ion ion-stats-bars"></i>
-                                            </div>
-                                            <a href="#" class="small-box-footer">
-                                                More info <i class="fa fa-arrow-circle-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-xs-12">
-                                        <!-- small box -->
-                                        <div class="small-box bg-green">
-                                            <div class="inner">
-                                                <h3>101<sup style="font-size: 20px">%</sup></h3>
-
-                                                <p>Bounce Rate</p>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ion ion-stats-bars"></i>
-                                            </div>
-                                            <a href="#" class="small-box-footer">
-                                                More info <i class="fa fa-arrow-circle-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-xs-12">
-                                        <!-- small box -->
-                                        <div class="small-box bg-green">
-                                            <div class="inner">
-                                                <h3>102<sup style="font-size: 20px">%</sup></h3>
-
-                                                <p>Bounce Rate</p>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ion ion-stats-bars"></i>
-                                            </div>
-                                            <a href="#" class="small-box-footer">
-                                                More info <i class="fa fa-arrow-circle-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-xs-12">
-                                        <!-- small box -->
-                                        <div class="small-box bg-yellow">
-                                            <div class="inner">
-                                                <h3>101<sup style="font-size: 20px">%</sup></h3>
-
-                                                <p>Bounce Rate</p>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ion ion-stats-bars"></i>
-                                            </div>
-                                            <a href="#" class="small-box-footer">
-                                                More info <i class="fa fa-arrow-circle-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-xs-12">
-                                        <!-- small box -->
-                                        <div class="small-box bg-green">
-                                            <div class="inner">
-                                                <h3>102<sup style="font-size: 20px">%</sup></h3>
-
-                                                <p>Bounce Rate</p>
-                                            </div>
-                                            <div class="icon">
-                                                <i class="ion ion-stats-bars"></i>
-                                            </div>
-                                            <a href="#" class="small-box-footer">
-                                                More info <i class="fa fa-arrow-circle-right"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </section>
-                            <!-- /.content -->
-                        </div>
-                        <!-- /.content-wrapper -->
-
-                        <footer class="main-footer">
-                            <div class="pull-right hidden-xs">
-                                <b>Version</b> 2.4.0
-                            </div>
-                            <strong>Copyright 2018 <a href="https://adminlte.io">Jakc Labs</a>.</strong> All rights
-                            reserved.
-                        </footer>
-                        <!-- /.control-sidebar -->
-                        <!-- Add the sidebar's background. This div must be placed
-                             immediately after the control sidebar -->
-                        <div class="control-sidebar-bg"></div>
-                    </div>
-                    <!-- ./wrapper -->
-
-                    <!-- jQuery 3 -->
-                    <script src="/jakc_queue/static/src/js/jquery/dist/jquery.min.js"></script>
-                    <!-- Bootstrap 3.3.7 -->
-                    <script src="/jakc_queue/static/src/js/bootstrap/dist/js/bootstrap.min.js"></script>
-                    <!-- SlimScroll -->
-                    <script src="/jakc_queue/static/src/js/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-                    <!-- FastClick -->
-                    <script src="/jakc_queue/static/src/js/fastclick/lib/fastclick.js"></script>
-                    <!-- AdminLTE App -->
-                    <script src="/jakc_queue/static/src/js/adminlte.min.js"></script>
-                    <!-- AdminLTE for demo purposes -->
-                    <script src="/jakc_queue/static/src/js/demo.js"></script>
-                    <script>
-                        $(document).ready(function () {
-                        $('.sidebar-menu').tree()
-                        })
-                    </script>
-                </body>
+                </html>
             </html>
-
         </template>
     </data>
 </odoo>
