--- a/jakc_queue/views/kiosk_screen_templates.xml
+++ b/jakc_queue/views/kiosk_screen_templates.xml
@@ -119,7 +119,8 @@
                                                 <h5 class="widget-user-desc">Founder &amp; CEO</h5>
                                             </div>
                                             <div class="widget-user-image">
-                                                <img class="img-circle" src="static/src/img/telkom-logo.jpg"/>
+                                                <img class="img-circle"
+                                                     src="/jakc_queue/static/src/img/telkom-logo.jpg"/>
                                             </div>
                                             <div class="box-footer">
                                                 <div class="row">
