--- a/jakc_queue/views/pickup_screen_templates.xml
+++ b/jakc_queue/views/pickup_screen_templates.xml
@@ -10,17 +10,17 @@
                     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
                           name="viewport"/>
                     <!-- Bootstrap 3.3.7 -->
-                    <link rel="stylesheet" href="static/src/css/bootstrap/dist/css/bootstrap.min.css"/>
+                    <link rel="stylesheet" href="/jakc_queue/static/src/css/bootstrap/dist/css/bootstrap.min.css"/>
                     <!-- Font Awesome -->
-                    <link rel="stylesheet" href="static/src/css/font-awesome/css/font-awesome.min.css"/>
+                    <link rel="stylesheet" href="/jakc_queue/static/src/css/font-awesome/css/font-awesome.min.css"/>
                     <!-- Ionicons -->
-                    <link rel="stylesheet" href="static/src/css/Ionicons/css/ionicons.min.css"/>
+                    <link rel="stylesheet" href="/jakc_queue/static/src/css/Ionicons/css/ionicons.min.css"/>
                     <!-- Theme style -->
-                    <link rel="stylesheet" href="static/src/css/AdminLTE.min.css"/>
+                    <link rel="stylesheet" href="/jakc_queue/static/src/css/AdminLTE.min.css"/>
                     <!-- AdminLTE Skins. Choose a skin from the css/skins
                          folder instead of downloading all of them to reduce the load. -->
-                    <link rel="stylesheet" href="static/src/css/skins/_all-skins.min.css"/>
-                    <link rel="stylesheet" href="static/src/css/queue.css"/>
+                    <link rel="stylesheet" href="/jakc_queue/static/src/css/skins/_all-skins.min.css"/>
+                    <link rel="stylesheet" href="/jakc_queue/static/src/css/queue.css"/>
 
                     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
                     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -471,17 +471,17 @@
                     <!-- ./wrapper -->
 
                     <!-- jQuery 3 -->
-                    <script src="static/src/js/jquery/dist/jquery.min.js"></script>
+                    <script src="/jakc_queue/static/src/js/jquery/dist/jquery.min.js"></script>
                     <!-- Bootstrap 3.3.7 -->
-                    <script src="static/src/js/bootstrap/dist/js/bootstrap.min.js"></script>
+                    <script src="/jakc_queue/static/src/js/bootstrap/dist/js/bootstrap.min.js"></script>
                     <!-- SlimScroll -->
-                    <script src="static/src/js/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+                    <script src="/jakc_queue/static/src/js/jquery-slimscroll/jquery.slimscroll.min.js"></script>
                     <!-- FastClick -->
-                    <script src="static/src/js/fastclick/lib/fastclick.js"></script>
+                    <script src="/jakc_queue/static/src/js/fastclick/lib/fastclick.js"></script>
                     <!-- AdminLTE App -->
-                    <script src="static/src/js/adminlte.min.js"></script>
+                    <script src="/jakc_queue/static/src/js/adminlte.min.js"></script>
                     <!-- AdminLTE for demo purposes -->
-                    <script src="static/src/js/demo.js"></script>
+                    <script src="/jakc_queue/static/src/js/demo.js"></script>
                     <script>
                         $(document).ready(function () {
                         $('.sidebar-menu').tree()
