--- a/jakc_queue/views/jakc_queue_report.xml
+++ b/jakc_queue/views/jakc_queue_report.xml
@@ -1,10 +1,31 @@
 <odoo>
-        <report id="queue_receipt"
-                string="Queue Receipt"
-                model="queue.trans"
-                report_type="qweb-pdf"
-                name="jakc_queue.report_queuereceipt"
-                file="jakc_queue.report_queuereceipt"
-                menu="True"
-        />
+    <report id="queue_receipt"
+            string="Queue Receipt"
+            model="queue.trans"
+            report_type="qweb-pdf"
+            name="jakc_queue.report_queuereceipt"
+            file="jakc_queue.report_queuereceipt"
+            menu="True"
+    />
+
+
+    <record id="paperformat_queue_receipt" model="report.paperformat">
+        <field name="name">Queue Receipt</field>
+        <field name="default" eval="True"/>
+        <field name="format">custom</field>
+        <field name="page_height">90</field>
+        <field name="page_width">70</field>
+        <field name="orientation">Portrait</field>
+        <field name="margin_top">5</field>
+        <field name="margin_bottom">5</field>
+        <field name="margin_left">5</field>
+        <field name="margin_right">5</field>
+        <field name="header_line" eval="False"/>
+        <field name="header_spacing">0</field>
+        <field name="dpi">90</field>
+    </record>
+
+    <record id="jakc_queue.queue_receipt" model="ir.actions.report.xml">
+        <field name="paperformat_id" ref="jakc_queue.paperformat_queue_receipt"/>
+    </record>
 </odoo>
