--- a/jakc_queue/views/kiosk_screen_templates.xml
+++ b/jakc_queue/views/kiosk_screen_templates.xml
@@ -20,6 +20,9 @@
                     <!-- AdminLTE Skins. Choose a skin from the css/skins
                          folder instead of downloading all of them to reduce the load. -->
                     <link rel="stylesheet" href="/jakc_queue/static/src/css/skins/_all-skins.min.css"/>
+                    <!-- Print js -->
+                    <link rel="stylesheet" href="/jakc_queue/static/src/css/print.min.css"/>
+
                     <link rel="stylesheet" href="/jakc_queue/static/src/css/queue.css"/>
 
                     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -359,6 +362,8 @@
                     <script src="/jakc_queue/static/src/js/adminlte.min.js"></script>
                     <!-- AdminLTE for demo purposes -->
                     <script src="/jakc_queue/static/src/js/demo.js"></script>
+                    <!-- Print.js -->
+                    <script src="/jakc_queue/static/src/js/print.min.js"></script>
                     <!-- Kiosk.js -->
                     <script src="/jakc_queue/static/src/js/kiosk.js"></script>
                 </body>
