--- a/jakc_queue/views/pickup_screen_templates.xml
+++ b/jakc_queue/views/pickup_screen_templates.xml
@@ -381,15 +381,9 @@
                     <script src="/jakc_queue/static/src/js/adminlte.min.js"></script>
                     <!-- AdminLTE for demo purposes -->
                     <script src="/jakc_queue/static/src/js/demo.js"></script>
-                    <script>
-                        $(document).ready(function () {
-                        $('.sidebar-menu').tree()
-                        $('button').click(function (e){
-                        console.log($(this).attr('code'));
+                    <!-- AdminLTE for demo purposes -->
+                    <script src="/jakc_queue/static/src/js/pikcup.js"></script>
 
-                        });
-                        })
-                    </script>
                 </body>
             </html>
 
