--- a/jakc_queue/views/kiosk_screen_templates.xml
+++ b/jakc_queue/views/kiosk_screen_templates.xml
@@ -104,9 +104,7 @@
                                                 <h5 class="widget-user-desc" id="trans_date">000</h5>
                                             </div>
                                             <div class="widget-user-image">
-                                                <span class="info-box-icon">
-                                                    <i class="fa fa-users"></i>
-                                                </span>
+                                                <img class="img-circle" src="/jakc_queue/static/src/img/no-image.jpg"/>
                                             </div>
                                             <div class="box-footer">
                                                 <div class="row">
