--- a/jakc_queue/views/jakc_queue_pickup_dashboard.xml
+++ b/jakc_queue/views/jakc_queue_pickup_dashboard.xml
@@ -69,8 +69,8 @@
         </record>
 
         <!-- Dashboard Menu -->
-        <menuitem id="menu_pickup_dashboard" action="action_pickup_kanban" parent="queue_main_menu" name="Dashboard"
-                  sequence="1"/>
+        <menuitem id="menu_pickup_dashboard" action="action_pickup_kanban" parent="jakc_queue.queue_main_menu"
+                  name="Dashboard" sequence="1"/>
 
     </data>
 </odoo>
