--- a/jakc_queue/views/jakc_queue_menu.xml
+++ b/jakc_queue/views/jakc_queue_menu.xml
@@ -7,14 +7,14 @@
  		<!-- QUEUE/MENU -->
         <!-- GENERAL -->
         <menuitem name="Counter" id="queue_general_menu" parent="base.queue_general_menu"/>
-        <menuitem id="queue_display_menu" name="Display" parent="jakc_queue.queue_general_menu"  action="queue_display_action"  sequence="1"/>
-        <menuitem id="queue_type_menu" name="Type" parent="jakc_queue.queue_general_menu"  action="queue_type_action"  sequence="2"/>
-        <menuitem id="queue_pickup_menu" name="Pickup" parent="jakc_queue.queue_general_menu"  action="queue_pickup_action" sequence="3"/>
+        <menuitem id="queue_display_menu" name="Display" parent="jakc_queue.queue_general_menu"  action="jakc_queue.queue_display_action"  sequence="1"/>
+        <menuitem id="queue_type_menu" name="Type" parent="jakc_queue.queue_general_menu"  action="jakc_queue.queue_type_action"  sequence="2"/>
+        <menuitem id="queue_pickup_menu" name="Pickup" parent="jakc_queue.queue_general_menu"  action="jakc_queue.queue_pickup_action" sequence="3"/>
         
         <!-- TRANSACTION -->
         <menuitem name="Transaction" id="queue_transaction_menu" parent="base.queue_transaction_menu"/>
-        <menuitem id="queue_pickup_log_menu" name="Pickup Log" parent="jakc_queue.queue_transaction_menu"  action="queue_pickup_log_action" sequence="1"/>
-        <menuitem id="queue_trans_menu" name="Transaction" parent="jakc_queue.queue_transaction_menu"  action="queue_trans_action" sequence="2"/>
+        <menuitem id="queue_pickup_log_menu" name="Pickup Log" parent="jakc_queue.queue_transaction_menu"  action="jakc_queue.queue_pickup_log_action" sequence="1"/>
+        <menuitem id="queue_trans_menu" name="Transaction" parent="jakc_queue.queue_transaction_menu"  action="jakc_queue.queue_trans_action" sequence="2"/>
         
     </data>
 </odoo>
