--- a/jakc_queue/views/jakc_queue_report.xml
+++ b/jakc_queue/views/jakc_queue_report.xml
@@ -13,13 +13,13 @@
         <field name="name">Queue Receipt</field>
         <field name="default" eval="True"/>
         <field name="format">custom</field>
-        <field name="page_height">90</field>
-        <field name="page_width">70</field>
-        <field name="orientation">Portrait</field>
-        <field name="margin_top">5</field>
-        <field name="margin_bottom">5</field>
-        <field name="margin_left">5</field>
-        <field name="margin_right">5</field>
+        <field name="page_height">80</field>
+        <field name="page_width">100</field>
+        <field name="orientation">Landscape</field>
+        <field name="margin_top">1</field>
+        <field name="margin_bottom">1</field>
+        <field name="margin_left">1</field>
+        <field name="margin_right">1</field>
         <field name="header_line" eval="False"/>
         <field name="header_spacing">0</field>
         <field name="dpi">90</field>
